--- a/src/WestWorld/project.json
+++ b/src/WestWorld/project.json
@@ -1,14 +1,11 @@
-﻿{
+{
   "version": "1.0.0-*",
   "buildOptions": {
     "emitEntryPoint": true
   },
 
   "dependencies": {
-    "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.1"
-    }
+    "Microsoft.NETCore.App": "1.1.0"
   },
 
   "frameworks": {
