--- a/src/WestWorld/project.json
+++ b/src/WestWorld/project.json
@@ -1,11 +1,16 @@
 {
   "version": "1.0.0-*",
+  "runtimes": {
+    "win10-x64": {}
+  },
   "buildOptions": {
     "emitEntryPoint": true
   },
 
   "dependencies": {
-    "Microsoft.NETCore.App": "1.1.0"
+    "Microsoft.Azure.DocumentDB.Core": "0.1.0-preview",
+    "Microsoft.NETCore.App": "1.1.0",
+    "RandomNameGeneratorLibrary": "1.2.2"
   },
 
   "frameworks": {
