--- a/src/WestWorld/Properties/launchSettings.json
+++ b/src/WestWorld/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "WestWorld": {
       "commandName": "Project",
-      "commandLineArgs": "HostList Pressure"
+      "commandLineArgs": "HostList"
     }
   }
 }
